cabal-version:      2.4
name:               Yampa-Front
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             EMQX-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , SDL
                    , Yampa
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010

executable Yampa-Front
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        Yampa-Front

    hs-source-dirs:   app
    default-language: Haskell2010
